update banner image, fix spacing issue on mobile

--- a/themes/child_theme/style.css
+++ b/themes/child_theme/style.css
@@ -22,7 +22,7 @@ Version:        0.1.0
 .introContainer {
   position: relative;
   background-color: #000;
-  background-image: url("/plantsciences/wp-content/themes/child_theme/plant-sciences-bg.jpg");
+  background-image: url("/commercialag/ageconomybarometer/wp-content/themes/child_theme/barometer-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
